# github-action-todo-tracker

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: debug.yml  release.yml  simple-test.yml  test-action.yml  todo-tracker.yml
docs/: adr-001.md  adr-xxx.md
src/todo_tracker/: __init__.py  cli.py  github_client.py  main.py  scanner.py
tests/: test_basic.py  test_cli.py  test_github_client.py  test_scanner.py
